--- a/GA2016O 1.0/wrapper-offline/wrapper/pages/html/list.html
+++ b/GA2016O 1.0/wrapper-offline/wrapper/pages/html/list.html
@@ -22,7 +22,7 @@
 <header>
 	<h1 style="margin:0"><img id="logo" src="../img/list_logo.png" alt="Wrapper: Online"/></h1>
 	<nav id="headbuttons">
-		
+		<a href="/pages/html/shop.html" class="button_big">Shop for mods</a>
 		<div class="dropdown_contain button_small">
 			<div class="dropdown_button">Make a character</div>
 			<nav class="dropdown_menu">
