--- a/GA2016O 1.0/wrapper-offline/server/index.html
+++ b/GA2016O 1.0/wrapper-offline/server/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<link rel="icon" href="favicon.ico" type="image/png">
 	<title>Assets Server</title>
-	<meta name="description" content="Wrapper: Offline's Assets Server">
+	<meta name="description" content="GoAnimate 2016: Offline's Assets Server">
 	<link rel="stylesheet" type="text/css" href="css/modern-normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/global.css">
 </head>
@@ -21,12 +21,12 @@
 <h2 id="welcome-to-the-home-of-the-asset-servers-for-wrapper-offline">Welcome to the home of the asset servers for Wrapper: Offline.</h2>
 
 <p>It’s most likely <a style="color:#777; cursor:pointer" id="cleverlydone" onclick="misterfreeman.play()" but="">you’re not supposed to be here</a>.<br />
-You probably got here through the magic known as the Network tab, by poking around Wrapper: Offline’s files, or simply from the launcher.<br />
+You probably got here through the magic known as the Network tab, by poking around GoAnimate 2016: Offline’s files, or simply from the launcher.<br />
 If you meant to come here, feel free to look around and do stuff. Maybe you’ll find a secret…</p>
 
 <p><a href="http://localhost:4343">Click here to back to the video list</a></p>
 
-<audio id="misterfreeman" src="store/you're_not_supposed_to_be_here.mp3">Your browser doesn't support HTML audio... so much for that easter egg</audio>
+<audio id="misterfreeman" src="store/you're_not_supposed_to_be_here.mp3">Your browser doesn't support HTML audio... so much for that easter egg.</audio>
 
 
 </main>
